crates/icydb-core/tests/ui/db/executor/load_module_private.rs
use icydb_core::db::executor::load::LoadExecutor;

fn main() {}
